feat(public): delete user (#69)
