# src/AuthorizationServer/DeleteUser/Domain/DeleteUserException.php
@@ -1,0 +1,11 @@
+<?php
+
+declare(strict_types=1);
+
+namespace App\AuthorizationServer\DeleteUser\Domain;
+
+use App\Shared\Domain\ProxyResponseException;
+
+final class DeleteUserException extends ProxyResponseException
+{
+}
